--- a/試し/Base.lproj/Main.storyboard
+++ b/試し/Base.lproj/Main.storyboard
@@ -28,8 +28,8 @@
                                 <rect key="frame" x="0.0" y="1" width="124" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="196-ds-XaA">
-                                <rect key="frame" x="102" y="-21" width="382" height="424"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="車 笑顔.png" translatesAutoresizingMaskIntoConstraints="NO" id="196-ds-XaA">
+                                <rect key="frame" x="113" y="3" width="351" height="386"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="test4.png" translatesAutoresizingMaskIntoConstraints="NO" id="rSu-pV-AfA">
@@ -137,7 +137,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="twitter.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Svp-SL-enQ">
-                                <rect key="frame" x="407" y="4" width="46" height="65"/>
+                                <rect key="frame" x="407" y="3" width="46" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="back.png" translatesAutoresizingMaskIntoConstraints="NO" id="PsS-70-E0F">
@@ -164,13 +164,13 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="480" height="320"/>
                     <connections>
-                        <outlet property="myButton" destination="i0C-gB-phP" id="jaf-sO-w5q"/>
                         <outlet property="myView" destination="KZf-KQ-cV7" id="Kix-Lg-4va"/>
+                        <outlet property="view1" destination="KZf-KQ-cV7" id="SBv-wh-jlS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NaR-ET-0LK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1311" y="712"/>
+            <point key="canvasLocation" x="-1275" y="585"/>
         </scene>
     </scenes>
     <resources>
@@ -183,6 +183,7 @@
         <image name="test6.png" width="300" height="300"/>
         <image name="twitter.jpg" width="598" height="554"/>
         <image name="スクリーンショット 2014-07-13 12.54.09.png" width="662" height="642"/>
+        <image name="車 笑顔.png" width="809" height="812"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
