--- a/試し/Base.lproj/Main.storyboard
+++ b/試し/Base.lproj/Main.storyboard
@@ -28,8 +28,8 @@
                                 <rect key="frame" x="0.0" y="1" width="124" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="車 笑顔.png" translatesAutoresizingMaskIntoConstraints="NO" id="196-ds-XaA">
-                                <rect key="frame" x="113" y="3" width="351" height="386"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="スクリーンショット 2014-08-10 15.29.45.png" translatesAutoresizingMaskIntoConstraints="NO" id="196-ds-XaA">
+                                <rect key="frame" x="109" y="1" width="351" height="386"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="test4.png" translatesAutoresizingMaskIntoConstraints="NO" id="rSu-pV-AfA">
@@ -151,9 +151,8 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="next" destination="ohL-MO-eIR" eventType="touchUpInside" id="lFz-AL-fCc"/>
+                                    <action selector="next" destination="ohL-MO-eIR" eventType="touchUpInside" id="S0F-OZ-7iH"/>
                                     <action selector="shou" destination="ohL-MO-eIR" eventType="touchUpInside" id="aEW-Tc-L1D"/>
-                                    <action selector="tapBtn" destination="ohL-MO-eIR" eventType="touchUpInside" id="AWm-Z4-1cG"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -164,13 +163,14 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="480" height="320"/>
                     <connections>
+                        <outlet property="imageView" destination="196-ds-XaA" id="pg3-fQ-EKl"/>
                         <outlet property="myView" destination="KZf-KQ-cV7" id="Kix-Lg-4va"/>
                         <outlet property="view1" destination="KZf-KQ-cV7" id="SBv-wh-jlS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NaR-ET-0LK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1275" y="585"/>
+            <point key="canvasLocation" x="-728" y="509"/>
         </scene>
     </scenes>
     <resources>
@@ -183,7 +183,7 @@
         <image name="test6.png" width="300" height="300"/>
         <image name="twitter.jpg" width="598" height="554"/>
         <image name="スクリーンショット 2014-07-13 12.54.09.png" width="662" height="642"/>
-        <image name="車 笑顔.png" width="809" height="812"/>
+        <image name="スクリーンショット 2014-08-10 15.29.45.png" width="1041" height="1041"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
