--- a/試し/Base.lproj/Main.storyboard
+++ b/試し/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="t6Y-a0-jhi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="9yS-ph-cRh">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -257,48 +257,54 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59y-nd-Nhe">
-                                <rect key="frame" x="240" y="81" width="240" height="240"/>
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton2" destination="9yS-ph-cRh" eventType="touchUpInside" id="Vqr-Lj-WDk"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="c7N-wf-nMf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y49-1p-Atx">
-                                <rect key="frame" x="240" y="81" width="240" height="240"/>
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton4" destination="9yS-ph-cRh" eventType="touchUpInside" id="FnY-k8-cyA"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="8vw-M0-cNQ"/>
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvr-qH-i49">
-                                <rect key="frame" x="240" y="81" width="240" height="240"/>
+                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton6" destination="9yS-ph-cRh" eventType="touchUpInside" id="FmD-KK-huF"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="BOc-40-5Jd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3oE-l2-4lG">
-                                <rect key="frame" x="0.0" y="80" width="224" height="240"/>
+                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton5" destination="9yS-ph-cRh" eventType="touchUpInside" id="qYa-wY-YCA"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="hVj-G9-pDf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTw-ot-Wwg">
-                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton3" destination="9yS-ph-cRh" eventType="touchUpInside" id="gmm-Tv-YCd"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="xhr-16-IIf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hem-Ok-lHW">
-                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
+                                <rect key="frame" x="0.0" y="80" width="224" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="illustrationButton1" destination="9yS-ph-cRh" eventType="touchUpInside" id="Xai-Pt-5rZ"/>
                                     <segue destination="qm6-yv-3EV" kind="modal" id="3iJ-Et-vlG"/>
@@ -321,6 +327,12 @@
                         <outlet property="illustration4" destination="yHo-MP-ezC" id="gbQ-ue-Bhs"/>
                         <outlet property="illustration5" destination="hVo-8Y-OlT" id="A0G-EP-4f1"/>
                         <outlet property="illustration6" destination="ENC-TD-9rg" id="gGP-Av-vEI"/>
+                        <outlet property="illustrationButton1" destination="3oE-l2-4lG" id="c10-iS-dwz"/>
+                        <outlet property="illustrationButton2" destination="59y-nd-Nhe" id="iHg-g1-Ky0"/>
+                        <outlet property="illustrationButton3" destination="Kvr-qH-i49" id="0mf-oW-MzN"/>
+                        <outlet property="illustrationButton4" destination="hTw-ot-Wwg" id="S4F-lg-vlq"/>
+                        <outlet property="illustrationButton5" destination="Hem-Ok-lHW" id="9O8-oc-iAd"/>
+                        <outlet property="illustrationButton6" destination="Y49-1p-Atx" id="yzU-t4-6Nk"/>
                         <outlet property="next" destination="s9B-RO-EBb" id="dcE-Fx-KPs"/>
                     </connections>
                 </viewController>
@@ -463,6 +475,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="cYs-3d-Bss"/>
+        <segue reference="xhr-16-IIf"/>
     </inferredMetricsTieBreakers>
 </document>
