--- a/試し/Base.lproj/Main.storyboard
+++ b/試し/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ライオン　１笑顔.png" translatesAutoresizingMaskIntoConstraints="NO" id="196-ds-XaA">
-                                <rect key="frame" x="107" y="-8" width="268" height="348"/>
+                                <rect key="frame" x="106" y="7" width="270" height="318"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K3K-8q-GdH">
@@ -196,6 +196,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="1440" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59y-nd-Nhe">
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton2" destination="9yS-ph-cRh" eventType="touchUpInside" id="Q8f-Gv-k1B"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="c7N-wf-nMf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y49-1p-Atx">
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton4" destination="9yS-ph-cRh" eventType="touchUpInside" id="Gyi-7F-LGW"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="8vw-M0-cNQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvr-qH-i49">
+                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton1" destination="9yS-ph-cRh" eventType="touchUpInside" id="F5g-YT-RqM"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="BOc-40-5Jd"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3oE-l2-4lG">
+                                <rect key="frame" x="256" y="80" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton6" destination="9yS-ph-cRh" eventType="touchUpInside" id="jCz-aT-NAX"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="hVj-G9-pDf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTw-ot-Wwg">
+                                <rect key="frame" x="0.0" y="80" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton3" destination="9yS-ph-cRh" eventType="touchUpInside" id="w4B-qT-NqV"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="xhr-16-IIf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hem-Ok-lHW">
+                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="illustrationButton5" destination="9yS-ph-cRh" eventType="touchUpInside" id="lPI-Hu-0zU"/>
+                                    <segue destination="qm6-yv-3EV" kind="modal" id="3iJ-Et-vlG"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="600.png" translatesAutoresizingMaskIntoConstraints="NO" id="XuN-rA-Fl5">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="321"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -211,7 +265,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="next" destination="9yS-ph-cRh" eventType="touchUpInside" id="hbg-My-nj4"/>
+                                    <action selector="next" destination="9yS-ph-cRh" eventType="touchUpInside" id="S3A-6b-ww8"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cUS-7e-xbE">
@@ -256,60 +310,6 @@
                                 <rect key="frame" x="720" y="72" width="240" height="240"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="59y-nd-Nhe">
-                                <rect key="frame" x="256" y="80" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton2" destination="9yS-ph-cRh" eventType="touchUpInside" id="Vqr-Lj-WDk"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="c7N-wf-nMf"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y49-1p-Atx">
-                                <rect key="frame" x="256" y="80" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton4" destination="9yS-ph-cRh" eventType="touchUpInside" id="FnY-k8-cyA"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="8vw-M0-cNQ"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvr-qH-i49">
-                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton6" destination="9yS-ph-cRh" eventType="touchUpInside" id="FmD-KK-huF"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="BOc-40-5Jd"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3oE-l2-4lG">
-                                <rect key="frame" x="0.0" y="81" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton5" destination="9yS-ph-cRh" eventType="touchUpInside" id="qYa-wY-YCA"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="hVj-G9-pDf"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hTw-ot-Wwg">
-                                <rect key="frame" x="256" y="80" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton3" destination="9yS-ph-cRh" eventType="touchUpInside" id="gmm-Tv-YCd"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="xhr-16-IIf"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hem-Ok-lHW">
-                                <rect key="frame" x="0.0" y="80" width="224" height="240"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12202825389999999" green="1" blue="0.0017448073" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="illustrationButton1" destination="9yS-ph-cRh" eventType="touchUpInside" id="Xai-Pt-5rZ"/>
-                                    <segue destination="qm6-yv-3EV" kind="modal" id="3iJ-Et-vlG"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -321,24 +321,23 @@
                         <outlet property="back" destination="Hy8-ab-sVN" id="1x3-oj-R3n"/>
                         <outlet property="button" destination="cUS-7e-xbE" id="uf7-FD-xJy"/>
                         <outlet property="button1" destination="y1w-Z9-6PU" id="Buh-ho-Gfb"/>
-                        <outlet property="illustration1" destination="8TW-yA-uBL" id="SeC-36-5AZ"/>
-                        <outlet property="illustration2" destination="23A-id-1Qi" id="B5B-Aa-FMG"/>
-                        <outlet property="illustration3" destination="Tsd-OX-5cf" id="aZ0-lH-UKM"/>
-                        <outlet property="illustration4" destination="yHo-MP-ezC" id="gbQ-ue-Bhs"/>
-                        <outlet property="illustration5" destination="hVo-8Y-OlT" id="A0G-EP-4f1"/>
-                        <outlet property="illustration6" destination="ENC-TD-9rg" id="gGP-Av-vEI"/>
-                        <outlet property="illustrationButton1" destination="3oE-l2-4lG" id="c10-iS-dwz"/>
-                        <outlet property="illustrationButton2" destination="59y-nd-Nhe" id="iHg-g1-Ky0"/>
-                        <outlet property="illustrationButton3" destination="Kvr-qH-i49" id="0mf-oW-MzN"/>
-                        <outlet property="illustrationButton4" destination="hTw-ot-Wwg" id="S4F-lg-vlq"/>
-                        <outlet property="illustrationButton5" destination="Hem-Ok-lHW" id="9O8-oc-iAd"/>
-                        <outlet property="illustrationButton6" destination="Y49-1p-Atx" id="yzU-t4-6Nk"/>
-                        <outlet property="next" destination="s9B-RO-EBb" id="dcE-Fx-KPs"/>
+                        <outlet property="illustration1" destination="8TW-yA-uBL" id="v0W-CV-sOA"/>
+                        <outlet property="illustration2" destination="23A-id-1Qi" id="pIp-3f-Yow"/>
+                        <outlet property="illustration3" destination="Tsd-OX-5cf" id="3y8-B0-loq"/>
+                        <outlet property="illustration4" destination="yHo-MP-ezC" id="4ju-Dw-lk6"/>
+                        <outlet property="illustration5" destination="hVo-8Y-OlT" id="sNb-4G-fFA"/>
+                        <outlet property="illustration6" destination="ENC-TD-9rg" id="TFF-tf-fqZ"/>
+                        <outlet property="illustrationButton1" destination="Kvr-qH-i49" id="JNK-Hd-uKR"/>
+                        <outlet property="illustrationButton2" destination="59y-nd-Nhe" id="LUF-LY-BfL"/>
+                        <outlet property="illustrationButton3" destination="hTw-ot-Wwg" id="u3j-wI-dxS"/>
+                        <outlet property="illustrationButton4" destination="Y49-1p-Atx" id="Nxt-ys-VfI"/>
+                        <outlet property="illustrationButton5" destination="Hem-Ok-lHW" id="ouG-uB-fyn"/>
+                        <outlet property="illustrationButton6" destination="3oE-l2-4lG" id="MP9-Q8-oOS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Eu-2Z-gTX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1291" y="291"/>
+            <point key="canvasLocation" x="-1298" y="293"/>
         </scene>
         <!--Expression View Controller-->
         <scene sceneID="vC9-3r-zGC">
@@ -475,6 +474,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="xhr-16-IIf"/>
+        <segue reference="cYs-3d-Bss"/>
     </inferredMetricsTieBreakers>
 </document>
